use jdk connector