@@ -1,42 +1,15 @@
 dependencies {
+    ext {
+        jerseyVersion = "2.32"
+    }
+
     // Version controlled by dependency management plugin
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'org.glassfish.jersey.core:jersey-client'
     implementation 'org.glassfish.jersey.media:jersey-media-json-jackson'
     implementation 'org.glassfish.jersey.media:jersey-media-multipart'
-
     implementation 'io.swagger.core.v3:swagger-annotations'
     swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli'
+    implementation "org.glassfish.jersey.inject:jersey-hk2:$jerseyVersion"
+    implementation "org.glassfish.jersey.connectors:jersey-jdk-connector:$jerseyVersion"
 }
-
-def artifactGroup = "${group}.policy"
-
-generateSwaggerCode {
-    inputFile = file('../common/openapi.yml')
-    language = 'java'
-    library = 'jersey2'
-
-    // For Swagger Codegen v3 on Java 16+
-    // See https://github.com/swagger-api/swagger-codegen/issues/10966
-    jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
-
-    components = [
-        apiDocs  : false, apiTests: false,
-        modelDocs: false, modelTests: false
-    ]
-
-    additionalProperties = [
-        modelPackage  : "${artifactGroup}.model",
-        apiPackage    : "${artifactGroup}.api",
-        invokerPackage: "${artifactGroup}.client",
-        dateLibrary   : 'java11',
-        java8         : true
-    ]
-
-    rawOptions = ['--ignore-file-override', "${projectDir}/.swagger-codegen-ignore"]
-}
-
-idea.module.generatedSourceDirs = [file("${generateSwaggerCode.outputDir}/src/main/java")]
-sourceSets.main.java.srcDir "${generateSwaggerCode.outputDir}/src/main/java"
-compileJava.dependsOn generateSwaggerCode
-sourcesJar.dependsOn generateSwaggerCode
